--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
-	"name": "clicky-game",
-	"version": "0.1.0",
-	"homepage": "https://neginnami.github.io/Clicky-Game",
-	"dependencies": {
-		"gh-pages": "^1.1.0",
-		"lodash": "^4.17.4",
-		"react": "^16.2.0",
-		"react-dom": "^16.2.0",
-		"react-scripts": "1.1.0"
-	},
-	"scripts": {
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject"
-	}
+  "name": "clicky-game",
+  "version": "0.1.0",
+  "homepage": "https://neginnami.github.io/Clicky-Game",
+  "dependencies": {
+    "gh-pages": "^1.1.0",
+    "lodash": "^4.17.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts": "1.1.0"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "description": "## Overview",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/irfanwalele/clickygame.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/irfanwalele/clickygame/issues"
+  }
 }
